# digital-garden

./: .gitignore  404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
Features/LaTeX Math Support/: index.html
Features/Mermaid Diagrams/: index.html
Features/Text Formatting/: index.html
Topic 1/Example/Transformers set of notes/: index.html
Topic 1/Note 1/: index.html
Topic 1/Note 2/: index.html
blog/: index.html
blog/archive/2024/: index.html
blog/archive/2025/: index.html
blog/category/algorithms/: index.html
css/: custom.css
docs/: index.md
docs/Features/: LaTeX Math Support.md  Mermaid Diagrams.md
docs/Topic 1/Example/: Transformers set of notes.md
docs/blog/: index.md
docs/blog/posts/: LaTeX Math Support.md  hello-world.md
docs/blog/posts/deep_learning/: Encoders and decoders - explaining BERT, BART and other acronyms.md  How do embeddings work?.md  Masking in transformers.md  Note 1.md  (+8 more)
javascripts/: mathjax.js
overrides/: main.html
search/: search_index.json
site/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
site/Features/LaTeX Math Support/: index.html
site/Features/Mermaid Diagrams/: index.html
site/Features/Text Formatting/: index.html
site/Topic 1/Note 1/: index.html
site/Topic 1/Note 2/: index.html
site/blog/: index.html
site/javascripts/: mathjax.js
site/search/: search_index.json
(+31 files in other folders)
